--- a/androidApp/src/main/res/drawable/ic_gender_male.xml
+++ b/androidApp/src/main/res/drawable/ic_gender_male.xml
@@ -8,24 +8,24 @@
         <path
             android:fillColor="#00000000"
             android:pathData="M14.952,9.177L24.952,2.177"
-            android:strokeColor="@color/my_profile_icon1"
+            android:strokeColor="#474747"
             android:strokeWidth="2" />
         <path
             android:fillColor="#00000000"
             android:pathData="M24.952,7.177L24.952,2.177"
-            android:strokeColor="@color/my_profile_icon2"
+            android:strokeColor="#20b9ff"
             android:strokeLineCap="round"
             android:strokeWidth="2" />
         <path
             android:fillColor="#00000000"
             android:pathData="M19.952,1.177L24.952,2.177"
-            android:strokeColor="@color/my_profile_icon2"
+            android:strokeColor="#20b9ff"
             android:strokeLineCap="round"
             android:strokeWidth="2" />
         <path
             android:fillColor="#00000000"
             android:pathData="M9,13.325m-8,0a8,8 0,1 1,16 0a8,8 0,1 1,-16 0"
-            android:strokeColor="@color/my_profile_icon1"
+            android:strokeColor="#474747"
             android:strokeWidth="2" />
     </group>
 </vector>
