Add app icon and name

--- a/androidApp/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/androidApp/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,31 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
+    android:viewportWidth="76.039"
+    android:viewportHeight="76.22">
+  <group android:scaleX="0.38907388"
+      android:scaleY="0.39"
+      android:translateX="23.227106"
+      android:translateY="23.2471">
     <path
-        android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:startY="49.59793"
-                android:startX="42.9492"
-                android:endY="92.4963"
-                android:endX="85.84757"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000"/>
+        android:pathData="m32.647,75.942c-0.655,-0.117 -2.042,-0.221 -3.083,-0.231 -3.442,-0.036 -9.733,-2.661 -14.464,-6.036 -2.737,-1.952 -6.763,-5.979 -8.716,-8.716 -2.027,-2.842 -3.918,-6.504 -5.031,-9.742 -1.052,-3.06 -1.353,-5.976 -1.353,-13.097 0,-7.121 0.301,-10.037 1.353,-13.097 1.865,-5.426 4.871,-10.194 9.083,-14.406 5.652,-5.652 13.051,-9.562 19.169,-10.13 1.455,-0.135 12.498,-0.3 24.54,-0.366l21.894,-0.121v6.776c0,5.44 -0.073,6.849 -0.369,7.145 -0.307,0.307 -3.771,0.382 -20.836,0.45 -20.386,0.081 -20.476,0.083 -22.551,0.683 -8.689,2.51 -15.085,8.956 -17.417,17.554 -0.846,3.116 -0.846,7.91 0,11.026 2.334,8.6 8.775,15.088 17.417,17.544 1.944,0.552 2.716,0.599 11.542,0.692l9.459,0.1v2.215c0,1.218 0.105,2.28 0.234,2.36 0.233,0.144 19.345,-10.947 19.345,-11.226 0,-0.279 -19.112,-11.37 -19.345,-11.226 -0.129,0.079 -0.234,1.15 -0.234,2.378v2.233h-8.286c-9.459,0 -10.177,-0.11 -12.164,-1.859 -3.646,-3.209 -2.886,-10.011 1.365,-12.22l1.419,-0.737h19.832c16.835,0 19.89,0.057 20.21,0.378 0.321,0.321 0.378,3.503 0.378,21.167v20.789l-21.101,-0.033c-11.605,-0.018 -21.636,-0.128 -22.291,-0.245z"
+        android:fillColor="#ffffff"/>
+  </group>
 </vector>
